[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Cars/CarTemplate.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Cars/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Particles/TurboParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/FINAL_acceleration.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Cars/CustomCar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Cars/CarSoundPlayer.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/FINAL_tire_screech_v2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/FINAL_turbo.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/Cars/DamageDector.gd" type="Script" id=9]
[ext_resource path="res://Assets/Sounds/FINAL_crash.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Cars/NavigationAgent2D.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item; 

uniform vec4 color : hint_color; 
uniform vec4 accent_color : hint_color; 

void fragment() {
	vec4 pixelColor = texture(TEXTURE, UV); 
	
	if (pixelColor.rgb == vec3(1,1,1)) {
		COLOR = vec4(color.rgb, pixelColor.a)
	} else if (pixelColor.rgb == vec3(0,0,1)) {
		COLOR = accent_color
	} else {
		COLOR = pixelColor
	}
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/accent_color = Color( 1, 1, 1, 1 )

[sub_resource type="StreamTexture" id=7]
resource_local_to_scene = true
load_path = "res://.import/sillohette_car.png-901e473f7d69b10e2518de98c91c6d58.stex"

[sub_resource type="CapsuleShape2D" id=6]
resource_local_to_scene = true
radius = 20.9999
height = 44.0003

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 23.0217

[node name="CarTemplate" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TurboParticlesLeft" parent="." instance=ExtResource( 3 )]
position = Vector2( -40, -10 )

[node name="TurboParticlesRight" parent="." instance=ExtResource( 3 )]
position = Vector2( -40, 10 )

[node name="ParticleSpawnLocation" type="Node2D" parent="."]
position = Vector2( -60, 0 )

[node name="CustomCar" parent="." instance=ExtResource( 5 )]
material = SubResource( 3 )
texture = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="DamageDetector" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
position = Vector2( 22, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 1.2, 1.2 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 9.0
script = ExtResource( 2 )

[node name="NavigationAgent2D" parent="." instance=ExtResource( 11 )]
path_desired_distance = 100.0
path_max_distance = 100.0

[node name="TireSquealPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
max_distance = 1000.0
script = ExtResource( 6 )
max_volume = -15

[node name="EnginePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.01
autoplay = true
max_distance = 1000.0
script = ExtResource( 6 )

[node name="TurboJetPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 1000.0
script = ExtResource( 6 )

[node name="CrashPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
max_distance = 1000.0
script = ExtResource( 6 )

[connection signal="body_entered" from="DamageDetector" to="DamageDetector" method="_on_DamageDetector_body_entered"]
